[project]
name = "rotate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyright>=1.1.408",
    "pytest>=8.4.2",
    "ruff>=0.14.14",
]

[pytest]
addopts = ["--import-mode=importlib"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests",]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
